Improved index page and added shortended text

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <div class="text02andstyle">
                 <h3 class="text02">My name is Dhruv Tripathi</h3>
                 <p class="text02-style">CS Undergrad @UTD. Future Cybersecurity Professional.</p>
+                <p class="text02-style">Based in Mckinney, Texas</p>
 
                 <div class="text-container02">
                     <h3>and I'm a <span class="auto-type"></span></h3>
@@ -154,14 +155,63 @@
                 <div class="content">
                     <h2 class="" data-aos="fade-right" data-aos-duration="1000">About me<br></h2><br>
                     <div class="content">
-                        <p class="about-text" data-aos="fade-right" data-aos-duration="1000">
+                        <!-- <p class="about-text" data-aos="fade-right" data-aos-duration="1000">
                             Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the
                             <span class="UTD">University of Texas at Dallas</span> with plans to graduate in the Spring of 2027. 
                             My interests lie in cybersecurity, web development, and cloud services where I'm always eager to explore and innovate. 
                             I'm skilled in Python, Java, HTML, CSS, JavaScript, and XML, and I'm constantly seeking new challenges to expand my skill set. 
                             Currently, I'm on the lookout for <strong>internships</strong> that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
                             Take a peek into my portfolio and <strong>explore</strong> the diverse range of projects I've crafted with passion and precision.
-                        </p>
+                        </p> -->
+
+                        <div class="contentContainerAboutMe">
+                            University of Texas at Dallas
+                            <div class="contentGraduationDate">
+                                Graduation in Spring 2027
+                            </div>
+                        </div>
+                        <div class="contentContainerAboutMe">
+                            Interests in Cybersecurity, Penetration Testing, <br> Blue Team, Web Design, AWS
+                        </div>
+                        <div class="contentContainerAboutMe">
+                            Looking for 2025 Summer Internships
+                        </div>
+                        <!--With image-->
+                        <div class="contentContainerAboutMe">
+                            Skilled in
+                            <div class="contentContainerAboutMeImages">
+                                <div class="languageBox">
+                                    <img src="images/pythonlogo.png" alt="Python Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/javaLogo.png" alt="JavaScript Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/HTMLCSSJSLogo.png" alt="Java Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/flutterlogo.png" alt="HTML Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/nextJSLogo.png" alt="HTML Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/wireSharkLogo.png" alt="HTML Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/nmapLogo.png" alt="HTML Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/kaliLinuxLogo.png" alt="HTML Logo">
+                                </div>
+                                <div class="languageBox">
+                                    <img src="images/metasploitableLogo.png" alt="HTML Logo">
+                                </div>
+                                <!-- Add more boxes for other languages -->
+                            </div>
+                        </div>
+                        
+                        <!--End container-->
                     </div>
                 </div>
             </div>
