--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
                 <div class="infoContainerText" data-aos="fade-left" data-aos-duration="2000">
                     <h1>What are these projects?</h1>
                     <div class="infoContainerTextPClass">
-                        <p class="infoContainerTextPClassContainer">
+                        <!-- <p class="infoContainerTextPClassContainer">
                             These projects include a mix of full-stack applications, 
                             front-end designs, <strong>real-world</strong> collaborations with nonprofits, and participation in CTFs and hackathons.
                              Each one provided an opportunity to solve unique <strong>challenges</strong> , whether through building interactive user interfaces, 
@@ -89,7 +89,21 @@
                             and real-world application of cybersecurity concepts. 
                             Collaborating on these initiatives helped me <strong>strengthen</strong> 
                             technical skills while understanding the importance of user-focused design and effective communication.
-                        </p>
+                        </p> -->
+
+                        <div class="contentContainerAboutMe">
+                            Full stack & Frontend Designs
+                            <div class="contentGraduationDate">
+                                non-profits & personal projects
+                            </div>
+                        </div>
+                        <div class="contentContainerAboutMe">
+                            Capture the Flag's & Hackathons
+                        </div>
+                        <div class="contentContainerAboutMe">
+                            Real world application & Collaboration <br>
+                            strengthening technical skills
+                        </div>
                     </div>
                 </div>
             </div>
@@ -219,13 +233,13 @@
         </div>
     </section> -->
 
-    <section class="addProjButton">
+    <!-- <section class="addProjButton">
         <div class="addProjButtonContainer">
             <a href="/construction.html" class="btn">
                 Additional Projects
             </a>
         </div>
-    </section>
+    </section> -->
 
     <section class="backButton">
         <div class="projectButton">
