Added titles in projects page

--- a/projects.html
+++ b/projects.html
@@ -110,6 +110,51 @@
         </div>
     </section>
 
+    <section class="appDemoTitle">
+        <div class="appDemoTitleContainer">
+            <h2>Cybersecurity & Capture The Flag</h2>
+        </div>
+    </section>
+
+     <!--Projects section-->
+    
+    <section class="testContainer">
+    <div class="contain">
+        <div class="containRow">
+
+            <div class="hoveringContainer">
+                <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
+                    <div class="imgwrap">
+                        <a href="codepathMainPage.html">
+                            <img class="boxImage" src="images/codepathlogo.jpg" alt="CodePath Logo">
+                        </a>
+                    </div>
+                    <div class="imageText">CodePath Cybersecurity</div>
+                </div>
+            </div>
+
+            <div class="hoveringContainer">
+                <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
+                    <div class="imgwrap">
+                        <a href="construction.html">
+                            <img class="boxImage" src="images/toyotamericainc.avif" alt="Toyota Logo">
+                        </a>
+                    </div>
+                    <div class="imageText">2024 Toyota HackFesta CTF</div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
+    <section class="appDemoTitle">
+        <div class="appDemoTitleContainer">
+            <h2>Full Stack & Frontend</h2>
+        </div>
+    </section>
+
     <!--Projects section-->
     
     <section class="testContainer">
@@ -137,15 +182,6 @@
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
                             <a href="epicsMainPage.html"><img class="boxImage"  src="images/epicslogo-removebg-preview.png" alt="">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="hoveringContainer">
-                    <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
-                        <div class="imgwrap">
-                            <a href="codepathcyb_101.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
                             </a>
                         </div>
                     </div>
